FEAT new script and class

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
     <div class="container p-3">
-        <div class="row">
-            ciao
+        <div class="text-center ">
+            <h1 class="p-3 mc-title">our team</h1>
+            <p class="p-3 mc-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora et quibusdam saepe eaque nostrum magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptas fugit sapiente. Saepe, id dignissimos. Cumque voluptatum quia voluptate asperiores.</p>
+        </div>
+        <div class="row row-cols-3">
+        
         </div>
     </div>
     
@@ -20,5 +27,6 @@
 
 
     <script src="./js/app.js"></script>
+    <script src="./js/bonus.js"></script>
 </body>
 </html>
